@@ -26,6 +26,10 @@ New in v0.8.00 (2016/07/??)
   - Backblaze announced a new domain for the b2 api
 * Fixed bug #1623342 with patch from Daniel Jakots
   - failing test on OpenBSD because tar/gtar not found
+* Merged in lp:~mwilck/duplicity/duplicity
+  - GPG: enable truly non-interactive operation with gpg2
+  - This patch fixes the IMO unexpected behavior that, when using GnuPG2, a pass phrase dialog always pops up for
+    saving backups. This is particularly annoying when trying to do unattended / fully automatic backups.
 
 
 New in v0.7.08 (2016/07/02)
